=======
CHANGES
=======

4.2.0 (unreleased)
------------------

- Nothing changed yet.


4.1.0 (2016-08-08)
------------------

- Test against released final versions, thus requiring ``zope.app.http`` >= 4.0
  (test dependency).


4.0.0 (2016-08-08)
------------------

- Claim compatibility to Python 3.4 and 3.5 and drop support for Python 2.6.

- Improve the publication factory lookup by falling back to a more generic
  registration if the specific factory chooses not to handle the request after
  all.

- Relax ZODB dependency to allow 3.10dev builds from SVN.

- Introduce ZopePublication.callErrorView as a possible hook point.


3.14.0 (2012-03-09)
-------------------

- Replace ZODB.POSException.ConflictError with
  transaction.interfaces.TransientError. The latter should be a more generic
  signal to retry a transaction/request.
  This requires ZODB3 >= 3.10.0 and transaction >= 1.1.0.

- Get rid of ZODB dependency.


3.13.2 (2011-08-04)
-------------------

- Add missing test dependency on zope.testing.

- Remove test dependency on zope.app.exception.


3.13.1 (2011-03-14)
-------------------

- Test fix: HTTP request should not have leading whitespace.


3.13.0 (2011-01-25)
-------------------

- Reenabled a test which makes sure ``405 MethodNotAllowed`` is returned
  when PUT is not supported. This requires at least version 3.10 of
  `zope.app.http`.


3.12.0 (2010-09-14)
-------------------

- Use the standard libraries doctest module.

- Include the ``notfound.txt`` test again but reduce its scope to functionality
  relevant to this distribution.

- Notify with IStartRequestEvent at the start of the request publication
  cycle.

3.11.1 (2010-04-19)
-------------------

- Fix up tests to work with newer zope.app.wsgi release (3.9.0).

3.11.0 (2010-04-13)
-------------------

- Don't depend on zope.app.testing and zope.app.zcmlfiles anymore in
  the tests.

3.10.2 (2010-01-08)
-------------------

- Lift the test dependency on zope.app.zptpage.

